# genjax-chi

./: .coverage  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  GUIDE.md  LICENSE  README.md  alex_vi_notebook.ipynb  codeofconduct.html  contributing.html  developing.html  gax.py  gex.py  handling.py  index.html  intro_to_genjax.ipynb  license.html  mkdocs.yml  noxfile.py  objects.inv  pixi.toml  pyproject.toml  scratch  scratch.ipynb  setup.py  simple.py  sitemap.xml  tour.py  tracediff_example_usage.ipynb
.github/workflows/: ci-nightly.yml  ci.yml  coverage.yml  dependabot-approve-and-auto-merge.yml  docs.yml  labeler.yml  mypy.yml  notebooks.yml  pre-commit.yml  pyright.yml  release.yml  ruff.yml  safety.yml  test_docs.yml
benchmarks/: test_2d_tracking.py  test_map_benchmark.py  test_simple_mh_benchmark.py  test_unfold_benchmark.py
benchmarks/micro/: mh.py  test_blackjax.py  test_mh.py
cookbook/active/: choice_maps.html  debugging.html  generative_function_interface.html  intro.html  jax_basics.html
cookbook/inactive/: generative_fun.html
design_docs/: batching.md  masking.md
docs/: conf.py  cookbook.md  genjax.html  index.html  index.md  index.rst  language_aperitifs.md  search.js
docs/_build/: .buildinfo  codeofconduct.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/css/: custom.css
docs/genjax/: autodigenjax.md  builtin.html  c_interface.rst  combinators.html  combinators.rst  core.html  datatypes.html  diff_jl.md  diff_jl.rst  distributions.html  encapsulated.html  experimental.html  extern.html  gen_fn.rst  generative_function.html  handlers.html  inference.html  interface.html  interface.rst  intrinsics.html  language_aperitifs.md  notebooks.md  notebooks.rst  pretty_print.html  serialization.html  tour.rst  your_first_inf.md
docs/notebooks/: README.md  _quarto.yml  custom.scss  index.ipynb  index.qmd  notebooks.qmd
examples/: 2d_tracking.py  aide.py  choice_grad_mvp.py  combinator_composition.py  composable_smc.py  curvefitting.py  dynamic_shapes.py  eight_schools.py  encapsulated_models.py  gaussian_processes.py  higher_order_models.py  incremental_example.py  learning.py  mala_mvp.py  map.py  propagate_interpreter_example.py  prox.py  scratch.py  selection.py  simple.py  simple_unfold.py  switch.py  switch_mvp.py  tour.py  trace_type.py  training_gen_fns.py  unfold.py  vmap_linreg.py  vmap_mvp.py
examples/exposing_c++_gen_fn/: CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/exposing_c++_gen_fn/include/: gen_fn.h  pybind11_helpers.h
examples/exposing_c++_gen_fn/lib/: gen_fn.cpp  main.cpp
examples/exposing_c++_gen_fn/src/: __init__.py  extern_gen_fn.py
examples/genjax2wasm/: README.md  genjax2wasm.py  pyproject.toml
experiments/approx_rendering/: README.md  approx_rendering.py  mccoy_nishad_pairprogramming.ipynb  pyproject.toml  rendering_test.py  rotate_shape.py  run.py  run_karen.py  run_karen_debug.ipynb  run_real_data.py  scene_gen.py  test.py  test_approx_rendering.py  test_plane_renderer.py
experiments/approx_rendering/fast_3dp3/: likelihood.py  model.py  rendering.py  shape.py  utils.py
experiments/exposing_c++_gen_fn/: CMakeLists.txt  setup.py
experiments/exposing_c++_gen_fn/lib/: main.cpp
experiments/exposing_c++_gen_fn/src/: __init__.py  extern_gen_fn.py
experiments/genjax2wasm/: genjax2wasm.py  pyproject.toml
experiments/incremental/: forward_mode_example.py  pyproject.toml
experiments/inference_tuning/: discrete_hmm.py  pyproject.toml
experiments/inference_tuning/discrete_hmm/: forward_backward.py  inference_config.py  interval_entropy.py  model_config.py  tuning.py  visualizer.py
genjax/: __init__.py  core.py  datatypes.py  distributions.py  encapsulated.py  extern.py  generative_function.py  handlers.py  interface.py  intrinsics.py  primitive.py
genjax/builtin/: __init__.py  builtin_datatypes.py  builtin_gen_fn.py  builtin_trace_type.py  builtin_tracetype.py  datatypes.py  handlers.py  intrinsics.py  jax_choice_map.py  jax_generative_function.py  jax_trace.py  language.py  shape_analysis.py  tracetypes.py  tree.py  trie.py  typing.py
genjax/combinators/: __init__.py  combinator_datatypes.py  combinator_tracetypes.py  learnable_combinator.py  list_trace_type.py  map.py  map_combinator.py  partial.py  partial_combinator.py  switch.py  switch_combinator.py  trainable_combinator.py  unfold.py  unfold_combinator.py  vector_choice_map.py  vector_trace_type.py
genjax/core/: __init__.py  callback.py  choice_tree.py  datatypes.py  graph_printing.py  handler.py  handling.py  hashabledict.py  incremental.py  masks.py  pretty_printer.py  pretty_printing.py  propagating.py  pytree.py  specialization.py  tracetypes.py  transforms.py
genjax/distributions/: __init__.py  bernoulli.py  beta.py  categorical.py  cauchy.py  dirichlet.py  distribution.py  distribution_trace.py  exponential.py  gamma.py  laplace.py  logistic.py  multivariate_normal.py  normal.py  pareto.py  poisson.py  trace.py  uniform.py  value_choice_map.py
genjax/experimental/: __init__.py  incremental.py  mem.py
genjax/inference/: __init__.py  blackjax.py  importance_sampling.py  metropolis_hastings.py  sequential_monte_carlo.py
gex/: __init__.py  core.py  distributions.py  generative_function.py  handlers.py  intrinsics.py
notebooks/: _quarto.yml  index.ipynb  speed.qmd
notebooks/active/: combinators.ipynb  inference_libraries.ipynb  intro.ipynb
notebooks/book/: index.html  (+3 more)
search/: search_index.js  search_index.json
site/: 404.html  codeofconduct.html  contributing.html  homepage.html  index.html  license.html  objects.inv  sitemap.xml
template/: custom.css
tests/: test_choice_grad.py  test_diff.py  test_distributions.py  test_generate.py  test_importance.py  test_simulate.py  test_update.py
(+889 files in other folders)
