[tool.poetry]
name = "approx_rendering"
version = "0.1.0"
description = "Experiments with approximate rendering in 3DP3."
authors = ["Nishad Gothoskar <nishad@mit.edu>", "McCoy R. Becker <mccoyb@mit.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jax = "^0.3.16"
jaxlib = "^0.3.15"
genjax = { path = "../../", develop = false }
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-benchmark = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
