[tool.poetry]
name = "genjax2wasm"
version = "0.1.0"
description = "An example of compiling a GenJAX generative function to WebAssembly."
authors = ["McCoy R. Becker <mccoyb@mit.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
tensorflow = "^2.9.1"
jax = "^0.3.16"
jaxlib = "^0.3.15"
genjax = { path = "../../", develop = false }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
