[tool.poetry]
name = "inference_tuning"
version = "0.1.0"
description = "Experiments with inference tuning (AIDE + SDOS)."
authors = ["McCoy R. Becker <mccoyb@mit.edu>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jax = "^0.3.16"
jaxlib = "^0.3.15"
genjax = { path = "../../", develop = false }
ptitprince = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
